--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "test",
   "version": "1.0.0",
   "description": "",
+  "start": "cat index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
