--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "test",
   "version": "1.0.0",
   "description": "",
-  "start": "cat index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cat index.html"
   },
   "repository": {
     "type": "git",
